@@ -1,3 +1,0 @@
-ProtoRPC
-========
-This page moved to :ref:`api.webapp2_extras.protorpc`.
