@@ -28,7 +28,6 @@ sys.path[0:0] = [
     theme_path,
     gae_path,
     # All libs used by webapp2 and extras.
-    os.path.join(path, 'lib', 'appengine-ndb-experiment'),
     os.path.join(path, 'lib', 'babel'),
     os.path.join(path, 'lib', 'Jinja2-2.6'),
     os.path.join(path, 'lib', 'Mako-0.4.1'),
@@ -36,9 +35,7 @@ sys.path[0:0] = [
     os.path.join(path, 'lib', 'WebOb-1.0.8'),
     # SDK libs.
     os.path.join(gae_path, 'lib', 'django_0_96'),
-    #os.path.join(gae_path, 'lib', 'webob'),
     os.path.join(gae_path, 'lib', 'yaml', 'lib'),
-    os.path.join(gae_path, 'lib', 'protorpc'),
     os.path.join(gae_path, 'lib', 'simplejson'),
     path,
 ]
